feat: :sparkles: FINISHED HTML
Finished all the HTML pages, included products pages

--- a/PaginasCatalogos/CatalogoZapatos.html
+++ b/PaginasCatalogos/CatalogoZapatos.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header id="header">
-        <img class="logoNav" src="/img/icon.png">
+        <a href="index.html">
+            <img class="logoNav" src="/img/icon.png">
+        </a>
 
         <div class="contNav">
             <nav class="navBar">
@@ -49,7 +51,7 @@
                 <p class="precioTachado precio">100</p>
                 <p class="precio">90</p>
 
-                <button onclick="location.href='/../carrito.html'" class="buttonObtener">Obtener</button>
+                <button onclick="location.href='/../Productos/Zapatos/zapato1.html'" class="buttonObtener">Obtener</button>
             </div>
         </section>
 
@@ -77,7 +79,7 @@
                 <p class="precioTachado precio">110</p>
                 <p class="precio">99</p>
 
-                <button onclick="location.href='/../carrito.html'" class="buttonObtener">Obtener</button>
+                <button onclick="location.href='/../Productos/Zapatos/zapato2.html'" class="buttonObtener">Obtener</button>
             </div>
         </section>
 
@@ -105,7 +107,7 @@
                 <p class="precioTachado precio">140</p>
                 <p class="precio">125</p>
 
-                <button onclick="location.href='/../carrito.html'" class="buttonObtener">Obtener</button>
+                <button onclick="location.href='/../Productos/Zapatos/zapato3.html'" class="buttonObtener">Obtener</button>
             </div>
         </section>
 
@@ -133,7 +135,7 @@
 
                 <p class="precio">190</p>
 
-                <button onclick="location.href='/../carrito.html'" class="buttonObtener">Obtener</button>
+                <button onclick="location.href='/../Productos/Zapatos/zapato4.html'" class="buttonObtener">Obtener</button>
             </div>
         </section>
     </main>
