--- a/categoria.html
+++ b/categoria.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header id="header">
-        <img class="logoNav" src="/img/icon.png">
+        <a href="index.html">
+            <img class="logoNav" src="/img/icon.png">
+        </a>
 
         <div class="contNav">
             <nav class="navBar">
