--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header id="header">
-        <img class="logoNav" src="/img/icon.png">
+        <a href="../../index.html">
+            <img class="logoNav" src="/img/icon.png">
+        </a>
 
         <div class="contNav">
             <nav class="navBar">
@@ -39,12 +41,18 @@
             <div class="contProductos">
                 <div class="producto">
                     <img class="imgMain" src="/img/Categorias/Celulares/celular1/productoGrande.webp">
+
+                    <button onclick="location.href='/../Productos/Celulares/celular1.html'" class="buttonObtener">Obtener</button>
                 </div>
                 <div class="producto">
                     <img class="imgMain" src="/img/Categorias/Camisas/camisa2/productoGrande.webp">
+
+                    <button onclick="location.href='/../Productos/Camisas/camisa1.html'" class="buttonObtener">Obtener</button>
                 </div>
                 <div class="producto">
                     <img class="imgMain" src="/img/Categorias/Camaras/camara2/productoGrande.webp">
+
+                    <button onclick="location.href='/../Productos/Camaras/camara1.html'" class="buttonObtener">Obtener</button>
                 </div>
             </div>
         </section>
