--- a/PaginasCatalogos/CatalogoCamaras.html
+++ b/PaginasCatalogos/CatalogoCamaras.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header id="header">
-        <img class="logoNav" src="/img/icon.png">
+        <a href="index.html">
+            <img class="logoNav" src="/img/icon.png">
+        </a>
 
         <div class="contNav">
             <nav class="navBar">
