--- a/Productos/Camaras/camara1.html
+++ b/Productos/Camaras/camara1.html
@@ -33,6 +33,8 @@
         </div>
     </header>
 
+    <div class="separador"></div>
+    
     <main>
         <section id="producto">
             <div class="contImgCamara1">
@@ -140,6 +142,8 @@
         </section>
 
     </main>
+
+    <div class="separador"></div>
 
     <footer id="footer">
         <div class="contFooter">
