feat: :sparkles: Finished Proyect
Finished Responsive, CSS styles finished and HTML

--- a/PaginasCatalogos/CatalogoCamaras.html
+++ b/PaginasCatalogos/CatalogoCamaras.html
@@ -35,11 +35,9 @@
         <section id="contCatalogos">
             <div class="contProductoCatalogo">
 
-                <div class="contImgCamara1">
-                    <div class="contImgPequeCamara1">
-                        <div class="imgPequeCamara1"></div>
-                        <div class="img2PequeCamara1"></div>
-                    </div>
+                <div class="contImg">
+                    <div class="imgPequeCamara1"></div>
+                    <div class="img2PequeCamara1"></div>
                     <div class="contImgGrandeCamara1"></div>
                 </div>
 
@@ -56,19 +54,20 @@
 
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta fugiat cumque expedita consequuntur. Aperiam ipsum, praesentium mollitia neque qui consectetur. Fugit enim nulla, amet hic eveniet dolor rem libero nostrum omnis modi, eum earum dolorem ratione voluptatem ducimus laborum impedit.</p>
 
-                    <p class="precioTachado precio">100</p>
-                    <p class="precio">90</p>
+                    <div class="precios">
+                        <p class="precioTachado precio">$100</p>
+                        <p class="precio">$90</p>
+                    </div>
 
-                    <button onclick="location.href='/../Productos/Camaras/camara1.html'" class="buttonObtener">Obtener</button>
+                    <button onclick="location.href='/../Productos/Camaras/camara1.html'" class="btnObtener">Obtener</button>
                 </div>
             </div>
 
             <div class="contProductoCatalogo">
-                <div class="contImgCamara2">
-                    <div class="contImgPequeCamara2">
-                        <div class="imgPequeCamara2"></div>
-                        <div class="img2PequeCamara2"></div>
-                    </div>
+
+                <div class="contImg">
+                    <div class="imgPequeCamara2"></div>
+                    <div class="img2PequeCamara2"></div>
                     <div class="contImgGrandeCamara2"></div>
                 </div>
 
@@ -83,20 +82,20 @@
                     </div>
 
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta fugiat cumque expedita consequuntur. Aperiam ipsum, praesentium mollitia neque qui consectetur. Fugit enim nulla, amet hic eveniet dolor rem libero nostrum omnis modi, eum earum dolorem ratione voluptatem ducimus laborum impedit.</p>
+                    
+                    <div class="precios">
+                        <p class="precioTachado precio">$100</p>
+                        <p class="precio">$90</p>
+                    </div>
 
-                    <p class="precioTachado precio">110</p>
-                    <p class="precio">99</p>
-
-                    <button onclick="location.href='/../Productos/Camaras/camara2.html'" class="buttonObtener">Obtener</button>
+                    <button onclick="location.href='/../Productos/Camaras/camara2.html'" class="btnObtener">Obtener</button>
                 </div>
             </div>
 
             <div class="contProductoCatalogo">
-                <div class="contImgCamara3">
-                    <div class="contImgPequeCamara3">
-                        <div class="imgPequeCamara3"></div>
-                        <div class="img2PequeCamara3"></div>
-                    </div>
+                <div class="contImg">
+                    <div class="imgPequeCamara3"></div>
+                    <div class="img2PequeCamara3"></div>
                     <div class="contImgGrandeCamara3"></div>
                 </div>
 
@@ -112,19 +111,19 @@
 
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta fugiat cumque expedita consequuntur. Aperiam ipsum, praesentium mollitia neque qui consectetur. Fugit enim nulla, amet hic eveniet dolor rem libero nostrum omnis modi, eum earum dolorem ratione voluptatem ducimus laborum impedit.</p>
 
-                    <p class="precioTachado precio">140</p>
-                    <p class="precio">125</p>
+                    <div class="precios">
+                        <p class="precioTachado precio">$100</p>
+                        <p class="precio">$90</p>
+                    </div>
 
-                    <button onclick="location.href='/../Productos/Camaras/camara3.html'" class="buttonObtener">Obtener</button>
+                    <button onclick="location.href='/../Productos/Camaras/camara3.html'" class="btnObtener">Obtener</button>
                 </div>
             </div>
 
             <div class="contProductoCatalogo">
-                <div class="contImgCamara4">
-                    <div class="contImgPequeCamara4">
-                        <div class="imgPequeCamara4"></div>
-                        <div class="img2PequeCamara4"></div>
-                    </div>
+                <div class="contImg">
+                    <div class="imgPequeCamara4"></div>
+                    <div class="img2PequeCamara4"></div>
                     <div class="contImgGrandeCamara4"></div>
                 </div>
 
@@ -141,9 +140,9 @@
 
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dicta fugiat cumque expedita consequuntur. Aperiam ipsum, praesentium mollitia neque qui consectetur. Fugit enim nulla, amet hic eveniet dolor rem libero nostrum omnis modi, eum earum dolorem ratione voluptatem ducimus laborum impedit.</p>
 
-                    <p class="precio">190</p>
+                    <p class="precio">$190</p>
 
-                    <button onclick="location.href='/../Productos/Camaras/camara4.html'" class="buttonObtener">Obtener</button>
+                    <button onclick="location.href='/../Productos/Camaras/camara4.html'" class="btnObtener">Obtener</button>
                 </div>
             </div>
         </section>
