--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <div class="contImagen">
                 <img class="logoBanner" src="/img/banner.png">
             </div>
+            
             <div class="contTxt">
                     <h1>CampusShop</h1>
             
@@ -56,20 +57,20 @@
                 <div class="producto">
                     <div class="contImgProducto1"></div>
 
-                    <h2 class="tProducto">Celular 1</h2>
-                    <button class="btnMainPage" onclick="location.href='../../Productos/Celulares/celular1.html'" class="buttonObtener">Obtener</button>
+                    <h2 class="tProducto">Portatil 1</h2>
+                    <button class="btnObtener" onclick="location.href='../../Productos/Celulares/celular1.html'" class="buttonObtener">Obtener</button>
                 </div>
                 <div class="producto">
                     <div class="contImgProducto2"></div>
 
                     <h2 class="tProducto">Camisa 2</h2>
-                    <button class="btnMainPage" onclick="location.href='/../Productos/Camisas/camisa1.html'" class="buttonObtener">Obtener</button>
+                    <button class="btnObtener" onclick="location.href='/../Productos/Camisas/camisa1.html'" class="buttonObtener">Obtener</button>
                 </div>
                 <div class="producto">
                     <div class="contImgProducto3"></div>
 
                     <h2 class="tProducto">Camara 2</h2>
-                    <button class="btnMainPage" onclick="location.href='/../Productos/Camaras/camara1.html'" class="buttonObtener">Obtener</button>
+                    <button class="btnObtener" onclick="location.href='/../Productos/Camaras/camara1.html'" class="buttonObtener">Obtener</button>
                 </div>
             </div>
         </section>
