--- a/categoria.html
+++ b/categoria.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header id="header">
-        <a href="../../index.html">
-            <img class="logoNav" src="/img/icon.png">
+        <a href="/index.html">
+            <img class="logoNav" src="/CampusShop/img/icon.png">
         </a>
 
         <a href="#links" class="navResponsive">
@@ -38,29 +38,29 @@
             <div class="contCategorias">
                 <div class="fila">
                     <div class="contCategoria producto">
-                        <a href="/PaginasCatalogos/CatalogoCamaras.html"><div class="contImgProductoCamaras"></div></a>
+                        <a href="/CampusShop/PaginasCatalogos/CatalogoCamaras.html"><div class="contImgProductoCamaras"></div></a>
 
                         <h3>Camaras</h3>
                     </div>
                     <div class="contCategoria producto">
-                        <a href="/PaginasCatalogos/CatalogoCamisas.html"><div class="contImgProductoCamisas"></div></a>
+                        <a href="/CampusShop/PaginasCatalogos/CatalogoCamisas.html"><div class="contImgProductoCamisas"></div></a>
 
                         <h3>Camisas</h3>
                     </div>
                     <div class="contCategoria producto">
-                        <a href="/PaginasCatalogos/CatalogoCelulares.html"><div class="contImgProductoCelulares"></div></a>
+                        <a href="/CampusShop/PaginasCatalogos/CatalogoCelulares.html"><div class="contImgProductoCelulares"></div></a>
                         
                         <h3>Celulares</h3>
                     </div>
                 </div>
                 <div class="fila">
                     <div class="contCategoria producto">
-                        <a href="/PaginasCatalogos/CatalogoPortatiles.html"><div class="contImgProductoPortatiles"></div></a>
+                        <a href="/CampusShop/PaginasCatalogos/CatalogoPortatiles.html"><div class="contImgProductoPortatiles"></div></a>
 
                         <h3>Portatiles</h3>
                     </div>
                     <div class="contCategoria producto">
-                        <a href="/PaginasCatalogos/CatalogoZapatos.html"><div class="contImgProductoZapatos"></div></a>
+                        <a href="/CampusShop/PaginasCatalogos/CatalogoZapatos.html"><div class="contImgProductoZapatos"></div></a>
 
                         <h3>Zapatos</h3>
                     </div>
