--- a/carrito.html
+++ b/carrito.html
@@ -11,7 +11,7 @@
 <body>
     <header id="header">
         <a href="/CampusShop/index.html">
-            <img class="logoNav" src="/img/icon.png">
+            <img class="logoNav" src="/CampusShop/img/icon.png">
         </a>
 
         <a href="#links" class="navResponsive">
